# T4Dashboard

./: .clangd  .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
.cursor/: context.md
EEZ project/: lv_port_pc_visual_studio-release-v9.4-legacy-vs-solution.code-workspace
EEZ project/3d_Prints/: Orca Front.3mf  Orca Main.3mf
EEZ project/EEZ_T4Dashboard/: EEZ_T4Dashboard.eez-project  EEZ_T4Dashboard.eez-project-ui-state
EEZ project/EEZ_T4Dashboard/src/: SpeedMask.ai  icons-vector_2.ai
EEZ project/EEZ_T4Dashboard/src/ui/: .eez-project-build  fonts.h  images.c  images.h  screens.c  screens.h  ui_font_eurostile_bold_95w_large.c  ui_font_eurostile_bold_95w_medium.c  ui_font_eurostile_bold_95w_small.c  ui_font_eurostile_bold___large.c  ui_font_eurostile_bold___medium.c  ui_font_eurostile_bold___small.c  (+17 more)
EEZ project/references/: vecteezy_free-car-dashboard-vector-symbols_102061.eps  vector icons.af  vector icons.af~lock~
EEZ project/references/vector/: Fuel-icon.eps
main/: CMakeLists.txt  config.h  config_json.c  config_json.h  idf_component.yml  main.c
main/hal/: hal_adc.c  hal_adc.h  hal_display.c  hal_display.h  hal_i2c.c  hal_i2c.h  hal_nvs.c  hal_nvs.h  hal_ota.c  hal_ota.h  hal_speed.c  hal_speed.h  hal_tach.c  hal_tach.h  hal_wifi.c  hal_wifi.h
main/lvgl/: lvgl.h
main/ui_port/: .eez-project-build  dashboard.c  dashboard.h  fonts.h  images.c  images.h  screens.c  screens.h  ui.c  ui_font_eurostile_bold_95w_medium.c  ui_font_eurostile_bold_95w_small.c  ui_image_glowplug_notification.c  ui_image_icon_battery.c  ui_image_icon_blinker_l.c  ui_image_icon_blinker_r.c  ui_image_icon_brake.c  ui_image_icon_fuel.c  ui_image_icon_highbeam.c  ui_image_icon_temp.c  ui_image_icon_warning.c  ui_image_icon_wifi.c  ui_image_led.c  ui_image_speedmask.c  ui_image_warning.c
