idf_component_register(
    SRCS
        "main.c"
        "config_json.c"
        "hal/hal_display.c"
        "hal/hal_i2c.c"
        "hal/hal_adc.c"
        "hal/hal_nvs.c"
        "hal/hal_speed.c"
        "hal/hal_tach.c"
        "hal/hal_wifi.c"
        "hal/hal_ota.c"
        "ui_port/screens.c"
        "ui_port/ui.c"
        "ui_port/images.c"
        "ui_port/styles.c"
        "ui_port/dashboard.c"
        "ui_port/ui_font_eurostile_bold_95w_large.c"
        "ui_port/ui_font_eurostile_bold_95w_medium.c"
        "ui_port/ui_font_eurostile_bold_95w_small.c"
        "ui_port/ui_image_icon_battery.c"
        "ui_port/ui_image_icon_blinker_l.c"
        "ui_port/ui_image_icon_blinker_r.c"
        "ui_port/ui_image_icon_brake.c"
        "ui_port/ui_image_icon_foglight.c"
        "ui_port/ui_image_icon_fuel.c"
        "ui_port/ui_image_icon_glowplug.c"
        "ui_port/ui_image_icon_highbeam.c"
        "ui_port/ui_image_icon_wifi.c"
        "ui_port/ui_image_icon_oil.c"
        "ui_port/ui_image_icon_temp.c"
        "ui_port/ui_image_icon_warning.c"
        "ui_port/ui_image_speedmask.c"
        "ui_port/ui_image_led.c"
        "ui_port/ui_image_temp_indicator.c"
        "ui_port/ui_image_glowplug_notification.c"
        "ui_port/ui_image_arrow_l.c"
        "ui_port/ui_image_icon_breake.c"
        "ui_port/ui_image_warning.c"
    INCLUDE_DIRS
        "."
        "hal"
        "ui_port"
    REQUIRES
        esp_lcd
        esp_mm
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_pcnt
        esp_timer
        nvs_flash
        driver
        lvgl
        esp_wifi
        esp_http_server
        app_update
        esp_netif
        esp_event
        cjson
)
